[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/pixlr-bg-result.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ghost_Intro.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 52.1536

[sub_resource type="CircleShape2D" id=2]
radius = 262.762

[sub_resource type="CircleShape2D" id=3]
radius = 54.1295

[node name="Ghost_Intro" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.38419e-07 )
scale = Vector2( 0.184359, 0.183492 )
texture = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
